--- a/index.html
+++ b/index.html
@@ -2,88 +2,67 @@
 
 <head>
     <title>CDPL:user database</title>
-    <link rel="stylesheet" type="css" href="style1.css" />
     <script type="javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script type="javascript" src=" script.js "></script>
+    <script type="javascript" src=" script.js"></script>
+    <link rel="stylesheet" type="css" href="style1.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body ng-controller="user-ctrl ">
+<body ng-controller="user-ctrl">
     <h2>Search User Database</h2>
-    <div class="color-overlay "></div>
-    <div ng-controller="myCtrl ">
-        Rows to Display : <input type="number " step="1 " min="0 " max="6 " ng-model="rowlimit " placeholder="Number of rows to be displayed " />
-        <br/> Enter Name : <input type="text " placeholder="Search Customer " ng-model="search ">
-        <br/> Enter Number : <input type="text " placeholder="Search CustomerId " ng-model="limit " />
+    <div class="color-overlay"></div>
+    <div ng-controller="myCtrl">
+        <br/> <br/> Rows to Display : <br/> <input type="number" step="1" min="0" max="6" ng-model="rowlimit" placeholder="Number of rows to be displayed" />
+        <br/> <br/> Enter Name : <br/> <input type="text" placeholder="Search by user name" ng-model="search">
+        <br/> <br/> Enter Number : <br/> <input type="text" placeholder="Search by user ID" ng-model="limit" />
         <br/>
         <br/>
-        <h2 style="text-align: center; ">Customer Details</h2>
-        <table cellpadding="2 " cellspacing="2 " borders="1 ">
+        <h2 style="text-align: center;">CDPL : User Database</h2>
+        <table cellpadding="2" cellspacing="2" borders="1">
             <tr>
-                <th scope="col " ng-click="orderByall( 'Cid') ">CustomerId
+                <th scope="col" ng-click="orderByall('cid')">User Id
                     <br>
-                    <input type="text " ng-model="search.Cid ">
+                    <input type="text" ng-model="search.cid">
                 </th>
-                <th scope="col " ng-click="orderByall( 'fname') ">Fname
+                <th scope="col" ng-click="orderByall('name')">Name
                     <br>
-                    <input type="text " ng-model="search.fname ">
+                    <input type="text" ng-model="search.name">
                 </th>
-                <th scope="col " ng-click="orderByall( 'lname') ">Lname
+                <th scope="col" ng-click="orderByall('age')">Age
                     <br>
-                    <input type="text " ng-model="search.lname ">
+                    <input type="text" ng-model="search.age">
                 </th>
-                <th scope="col " ng-click="orderByall( 'gender') ">Gender
+                <th scope="col" ng-click="orderByall('nationality')">Nationality
                     <br>
-                    <input type="text " ng-model="search.gender ">
+                    <input type="text" ng-model="search.nationality">
                 </th>
-                <th scope="col " ng-click="orderByall( 'phone') ">Phone
+                <th scope="col" ng-click="orderByall('designation')">Designation
                     <br>
-                    <input type="text " ng-model="search.phone ">
+                    <input type="text" ng-model="search.designation">
+                </th>
+                <th scope="col" ng-click="orderByall('email')">Email
+                    <br>
+                    <input type="text" ng-model="search.email">
+                </th>
+                <th scope="col" ng-click="orderByall('contact')">Contact
+                    <br>
+                    <input type="text" ng-model="search.contact">
                 </th>
             </tr>
 
             <tbody>
-                <tr ng-repeat="item in names| limitTo:rowlimit |filter:search| orderBy:myOrderBy ">
-                    <td>{{item.Cid| myfilterid:limit}}</td>
-                    <td>{{item.fname| myfilter:search}}</td>
-                    <td>{{item.lname|uppercase}}</td>
-                    <td>{{item.gender|lowercase}}</td>
-                    <td>{{item.phone}}</td>
-
-
+                <tr ng-repeat="item in names| limitTo:rowlimit |filter:search| orderBy:myOrderBy">
+                    <td>{{item.cid|myfilterid:limit}}</td>
+                    <td>{{item.name|myfilter:search}}</td>
+                    <td>{{item.age}}</td>
+                    <td>{{item.nationality}</td>
+                    <td>{{item.designation}}</td>
+                    <td>{{item.email|lowercase}}</td>
+                    <td>{{item.contact}}</td>
                 </tr>
             </tbody>
         </table>
-
     </div>
-
-    <script>
-        var mainApp = angular.module("mainApp ", []);
-
-        mainApp.controller('studentController', function($scope) {
-            $scope.student = {
-                firstName: "Mahesh ",
-                lastName: "Parashar ",
-                fees: 500,
-
-                subjects: [{
-                    name: 'Physics',
-                    marks: 70
-                }, {
-                    name: 'Chemistry',
-                    marks: 80
-                }, {
-                    name: 'Math',
-                    marks: 65
-                }],
-                fullName: function() {
-                    var studentObject;
-                    studentObject = $scope.student;
-                    return studentObject.firstName + " " + studentObject.lastName;
-                }
-            };
-        });
-    </script>
-
 </body>
 
 </html>
