--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
     <title>CDPL:user database</title>
     <script type="javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script type="javascript" src=" script.js"></script>
     <link rel="stylesheet" type="css" href="style1.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body ng-controller="user-ctrl">
-    <h2>Search User Database</h2>
+    <h2 class="header">Search User Database</h2>
     <div class="color-overlay"></div>
     <div ng-controller="myCtrl">
-        <br/> <br/> Rows to Display : <br/> <input type="number" step="1" min="0" max="6" ng-model="rowlimit" placeholder="Number of rows to be displayed" />
-        <br/> <br/> Enter Name : <br/> <input type="text" placeholder="Search by user name" ng-model="search">
-        <br/> <br/> Enter Number : <br/> <input type="text" placeholder="Search by user ID" ng-model="limit" />
-        <br/>
-        <br/>
-        <h2 style="text-align: center;">CDPL : User Database</h2>
+        <br /> <br /> Rows to Display : <br /> <input type="number" step="1" min="0" max="6" ng-model="rowlimit" placeholder="Number of rows to be displayed" />
+        <br /> <br /> Enter Name : <br /> <input type="text" placeholder="Search by user name" ng-model="search">
+        <br /> <br /> Enter Number : <br /> <input type="text" placeholder="Search by user ID" ng-model="limit" />
+        <br />
+        <br />
+        <h2 class="header">CDPL : User Database</h2>
         <table cellpadding="2" cellspacing="2" borders="1">
             <tr>
                 <th scope="col" ng-click="orderByall('cid')">User Id
@@ -51,18 +50,19 @@
             </tr>
 
             <tbody>
-                <tr ng-repeat="item in names| limitTo:rowlimit |filter:search| orderBy:myOrderBy">
-                    <td>{{item.cid|myfilterid:limit}}</td>
-                    <td>{{item.name|myfilter:search}}</td>
+                <tr ng-repeat="item in names | limitTo:rowlimit | filter:search | orderBy:myOrderBy">
+                    <td>{{item.cid}}</td>
+                    <td>{{item.name|namefilter:search}}</td>
                     <td>{{item.age}}</td>
                     <td>{{item.nationality}</td>
                     <td>{{item.designation}}</td>
                     <td>{{item.email|lowercase}}</td>
-                    <td>{{item.contact}}</td>
+                    <td>{{item.contact|phnfilter}}</td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <script type="javascript" src=" script.js"></script>
 </body>
 
 </html>
