--- a/index.xhtml
+++ b/index.xhtml
@@ -12,16 +12,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 
     <!--linking javascript files-->
+    <script type="javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+
     <script type="javascript" src="script.js"></script>
-    <script type="javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 </head>
 
-<body ng-controller="myctrl">
+<body ng-controller="myCtrl">
     <h2 class="header">Search User Database</h2>
     <div class="conatiner" ng-controller="myCtrl">
         <br /> <br /> <label>Rows to Display :</label> <br /> <input class="filter" type="number" step="1" min="0" max="6" ng-model="rowlimit" placeholder="Number of rows to be displayed" />
-        <br /> <br /><label> Enter Name : </label><br /> <input class="filter" type="text" placeholder="Search by user name" ng-model="search" />
-        <br /> <br /><label> Enter User ID : </label><br /> <input class="filter" type="text" placeholder="Search by user ID" ng-model="search" />
+        <br /> <br /><label> Enter Name : </label><br /> <input class="filter" type="text" placeholder="Search by user name" ng-model="searchName" />
+        <br /> <br /><label> Enter User ID : </label><br /> <input class="filter" type="text" placeholder="Search by user ID" ng-model="searchId" />
         <br />
         <br />
         <h2 class="header">CDPL : User Database</h2>
@@ -51,20 +52,18 @@
             </tr>
 
             <tbody>
-                <tr ng-repeat="item in myData | limitTo:rowlimit | filter:search | orderBy:myOrderBy">
-                    <td>{{item.cid | limitRow:limit}}</td>
-                    <td>{{item.name | formatName:search}}</td>
+                <tr ng-repeat="item in myData | limitTo:rowlimit | filter:search | orderBy:myOrderBy |  filter:searchName | filter:searchId">
+                    <td>{{item.cid}}</td>
+                    <td>{{item.name}}</td>
                     <td>{{item.age}}</td>
-                    <td>{{item.nationality | uppercase}</td>
+                    <td>{{item.nationality}}</td>
                     <td>{{item.designation}}</td>
-                    <td>{{item.email | lowercase}}</td>
-                    <td>{{item.contact | formatNum}}</td>
+                    <td>{{item.email}}</td>
+                    <td>{{item.contact}}</td>
                 </tr>
             </tbody>
         </table>
     </div>
-    <br />
-    <br />
     <button onclick="hw()">Click me!</button>
 </body>
 
