--- a/index.xhtml
+++ b/index.xhtml
@@ -21,8 +21,9 @@
     <h2 class="header">Search User Database</h2>
     <div class="conatiner" ng-controller="myCtrl">
         <br /> <br /> <label>Rows to Display :</label> <br /> <input class="filter" type="number" step="1" min="0" max="10" ng-model="rowlimit" placeholder="Number of rows to be displayed" />
-        <br /> <br /><label> Enter Name : </label><br /> <input class="filter" type="text" placeholder="Search by user name" ng-model="searchName" />
-        <br /> <br /><label> Enter User ID : </label><br /> <input class="filter" type="text" placeholder="Search by user ID" ng-model="searchId" />
+        <br /> <br /><label> Enter Keyword : </label><br /> <input class="filter" type="text" placeholder="Search by keyword" ng-model="searchKey" />
+        <!-- <br /> <br /><label> Enter User ID : </label><br /> <input class="filter" type="text" placeholder="Search by user ID" ng-model="searchId" />
+        -->
         <br />
         <br />
         <h2 class="header">CDPL : User Database</h2>
@@ -52,7 +53,7 @@
             </tr>
 
             <tbody>
-                <tr ng-repeat="item in myData | limitTo:rowlimit | filter:search | orderBy:myOrderBy |  filter:searchName | filter:searchId">
+                <tr ng-repeat="item in myData | limitTo:rowlimit | filter:search | orderBy:myOrderBy |  filter:searchKey | filter:searchId">
                     <td>{{item.cid}}</td>
                     <td>{{item.name}}</td>
                     <td>{{item.age}}</td>
