--- a/index.xhtml
+++ b/index.xhtml
@@ -20,7 +20,7 @@
 <body ng-controller="myCtrl">
     <h2 class="header">Search User Database</h2>
     <div class="conatiner" ng-controller="myCtrl">
-        <br /> <br /> <label>Rows to Display :</label> <br /> <input class="filter" type="number" step="1" min="0" max="10" ng-model="rowlimit" placeholder="Number of rows to be displayed" />
+        <label>Rows to Display :</label> <br /> <input class="filter" type="number" step="1" min="0" max="10" ng-model="rowlimit" placeholder="Number of rows to be displayed" />
         <br /> <br /><label> Enter Keyword : </label><br /> <input class="filter" type="text" placeholder="Search by keyword" ng-model="searchKey" />
         <!-- <br /> <br /><label> Enter User ID : </label><br /> <input class="filter" type="text" placeholder="Search by user ID" ng-model="searchId" />
         -->
