--- a/index.xhtml
+++ b/index.xhtml
@@ -22,8 +22,9 @@
     <div class="conatiner" ng-controller="myCtrl">
         <label>Rows to Display :</label> <br /> <input class="filter" type="number" step="1" min="0" max="10" ng-model="rowlimit" placeholder="Number of rows to be displayed" />
         <br /> <br /><label> Enter Keyword : </label><br /> <input class="filter" type="text" placeholder="Search by keyword" ng-model="searchKey" />
-        <!-- <br /> <br /><label> Enter User ID : </label><br /> <input class="filter" type="text" placeholder="Search by user ID" ng-model="searchId" />
-        -->
+        <button class="ord-btn">Order By Name</button>
+        <button class="ord-btn">Order By Age</button>
+        <!-- <br /> <br /><label> Enter User ID : </label><br /> <input class="filter" type="text" placeholder="Search by user ID" ng-model="searchId" /> -->
         <br />
         <br />
         <h2 class="header">CDPL : User Database</h2>
