--- a/index.xhtml
+++ b/index.xhtml
@@ -30,31 +30,31 @@
         <h2 class="header">CDPL : User Database</h2>
         <table cellpadding="2" cellspacing="2" borders="1">
             <tr>
-                <th scope="col" ng-click="orderByall('cid')">User Id <br />
+                <th scope="col" ng-click="sortCols('cid')">User Id <br />
                     <input type="text" ng-model="search.cid" />
                 </th>
-                <th scope="col" ng-click="orderByall('name')">Name <br />
+                <th scope="col" ng-click="sortCols('name')">Name <br />
                     <input type="text" ng-model="search.name" />
                 </th>
-                <th scope="col" ng-click="orderByall('age')">Age <br />
+                <th scope="col" ng-click="sortCols('age')">Age <br />
                     <input type="text" ng-model="search.age" />
                 </th>
-                <th scope="col" ng-click="orderByall('nationality')">Nationality <br />
+                <th scope="col" ng-click="sortCols('nationality')">Nationality <br />
                     <input type="text" ng-model="search.nationality" />
                 </th>
-                <th scope="col" ng-click="orderByall('designation')">Designation <br />
+                <th scope="col" ng-click="sortCols('designation')">Designation <br />
                     <input type="text" ng-model="search.designation" />
                 </th>
-                <th scope="col" ng-click="orderByall('email')">Email <br />
+                <th scope="col" ng-click="sortCols('email')">Email <br />
                     <input type="text" ng-model="search.email" />
                 </th>
-                <th scope="col" ng-click="orderByall('contact')">Contact <br />
+                <th scope="col" ng-click="sortCols('contact')">Contact <br />
                     <input type="text" ng-model="search.contact" />
                 </th>
             </tr>
 
             <tbody>
-                <tr ng-repeat="item in myData | limitTo:rowlimit | filter:search | orderBy:myOrderBy |  filter:searchKey | filter:searchId">
+                <tr ng-repeat="item in myData | limitTo:rowlimit | filter:search | orderBy:sortCols |  filter:searchKey | filter:searchId">
                     <td>{{item.cid}}</td>
                     <td>{{item.name}}</td>
                     <td>{{item.age}}</td>
